--- a/index.html
+++ b/index.html
@@ -21,22 +21,26 @@
     </header>
     <header>
                 <h1>EFEKTYWNE DZIAŁANIA DLA WASZEGO BIZNESU</h1>
-                <button type="submit">Zamów usługę</button>
+                <button type="button">Zamów usługę</button>
     </header>
 
 
     <main>
             <div>
             <ul style="list-style-type:disc;">
+                <h4>Lorem ipsum</h4>
                 <li> Lorem ipsum dolor sit amet, consectetur adipiscing
                     elit. Nam
                         vel arcu sem. Sed non sodales dui. Interdum et malesuada</li>
+                <h4>Lorem ipsum</h4>
                 <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Nam
                         vel arcu sem. Sed non sodales dui. Interdum et malesuada</li>
+                <h4>Lorem ipsum</h4>
                 <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Nam
                         vel arcu sem. Sed non sodales dui. Interdum et malesuada</li>
+                <h4>Lorem ipsum</h4>
                 <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Nam
                         vel arcu sem. Sed non sodales dui. Interdum et malesuada</li>
@@ -44,28 +48,24 @@
         </div>
         <section>
             <h2>Czym się zajmujemy?</h2>
-                <ul>
-                    <li>Komputer1</li>
-                    <li>Komputer2</li>
-                    <li>Komputer3</li>
-                </ul>
+                
                 <figure>
                     <img
-                        src="./assets/box_1-2.jpg"
+                        src="./images/keyboard.jpg"
                         alt="Komputer 1"
                         width="370"
                         height="294"/>
                 </figure>
                 <figure>
                     <img
-                        src="./assets/box_2-2.jpg"
+                        src="./images/mobile.jpg"
                         alt="Komputer 2"
                         width="370"
                         height="294">
                 </figure>
                 <figure>
                     <img
-                        src="./assets/box_3-2.jpg"
+                        src="./images/tablet.jpg"
                         alt="Komputer 3"
                         width="370"
                         height="294">
@@ -75,13 +75,13 @@
             <h2>Nasz zespół</h2>
                         <ul>
                             <li>John Doe Product Designer</li>
-                            <li>John Doe Frontend Develope</li>
+                            <li>John Doe Product Designer</li>
                             <li>John Doe Marketing</li>
                             <li>John Doe UI Designer</li>
                         </ul>
                         <figure>
                             <img
-                                src="./assets/team_card_1-2.jpg"
+                                src="./images/johndoe_product_designer.jpg"
                                 alt="John Doe Product Designer"
                                 width="270"
                                 height="368"
@@ -89,7 +89,7 @@
                         </figure>
                         <figure>
                             <img
-                                src="./assets/team_card_1-2.jpg"
+                                src="./images/johndoe_produktdesigner.jpg"
                                 alt="John Doe Product Designer"
                                 width="270"
                                 height="368"
@@ -97,7 +97,7 @@
                         </figure>
                         <figure>
                             <img
-                                src="./assets/team_card_3-2.jpg"
+                                src="./images/johndoe_marketing.jpg"
                                 alt="John Doe Marketing"
                                 width="270"
                                 height="368"
@@ -105,7 +105,7 @@
                         </figure>
                         <figure>
                                 <img
-                                    src="./assets/team_card_4-2.jpg"
+                                    src="./images/johndoe_iudesigner.jpg"
                                     alt="John Doe UI Designer"
                                     width="270"
                                     height="368"
@@ -116,7 +116,7 @@
 
     <footer>
             <address>
-                WebStudio
+                <a href="http://127.0.0.1:5500/index.html">WebStudio</a>
                 m. Warszawa, Aleje Jerozolimskie 21
                 <a href="mailto:info@example.com">info@example.com</a>
                 <a href="tel:+48111111111">+48 111 111 111</a>
